bdr.BDR2.scala.error
Erreur de compilation :
BDR2:2: error: not found: value l
l = litMessage()
^BDR2:3: error: not found: value l
l match {
^